# Poisson_Equation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  poisson_equation.pyx  setup.py
include/: Array2D.hpp  Library.hpp  Solver.hpp  Writer.hpp
source/: Library.cpp  Solver.cpp  Writer.cpp
